# sweeprs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  deploy.yml  docker.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: main.rs
src/: board.rs  cell.rs  error.rs  lib.rs  main.rs  sweeper.rs
src/app/: mod.rs
src/sweeper/: cell.rs  constant.rs  error.rs  mod.rs  sweeper.rs
sweeprs/: Cargo.toml
sweeprs/src/: error.rs
