[package]
name = "sweeprs"
version = "0.1.0"
authors = ["M Ilman Nafian <milmannafian04@gmail.com>"]
edition = "2018"
description = "Sweeprs is a minesweeper engine library built using rust"
repository = "https://github.com/ilmannafian04/sweeprs"
homepage = "https://github.com/ilmannafian04/sweeprs"
license-file = "./LICENSE"
readme = "./README.md"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"

[workspace]
members = [
    ".",
    "cli"
]
