[package]
name = "sweeprs"
version = "0.2.0"
authors = ["M Ilman Nafian <milmannafian04@gmail.com>"]
edition = "2021"
description = "Sweeprs is a minesweeper engine library built using rust"
repository = "https://github.com/ilmannafian04/sweeprs"
homepage = "https://github.com/ilmannafian04/sweeprs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
